--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.localcoin</groupId>
         <artifactId>super-pom-java</artifactId>
-        <version>LATEST</version>
+        <version>1.0.4</version>
     </parent>
 
     <properties>
