--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>com.generalbytes</groupId>
             <artifactId>batm-server-extensions-api</artifactId>
-            <version>1.0.49.1</version>
+            <version>1.1.16.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -161,6 +161,13 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.10.5</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
